--- a/tigers.yaml
+++ b/tigers.yaml
@@ -1,11 +1,11 @@
-team: Tigers
+team: Kenneth
 
 manager: Donald
 
 coach: Grace
 
 members:
-- Linda
-- William
-- David
-- George
+  - Linda
+  - William
+  - David
+  - George
